--- a/DirectXGame2.vcxproj
+++ b/DirectXGame2.vcxproj
@@ -15,6 +15,7 @@
     <ClCompile Include="DirectXClass.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MyEngine.cpp" />
+    <ClCompile Include="MyMath.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="WindowsClass.cpp" />
   </ItemGroup>
@@ -38,8 +39,11 @@
   <ItemGroup>
     <ClInclude Include="ConvertString.h" />
     <ClInclude Include="DirectXClass.h" />
+    <ClInclude Include="Matrix4x4.h" />
     <ClInclude Include="MyEngine.h" />
+    <ClInclude Include="MyMath.h" />
     <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Vector3.h" />
     <ClInclude Include="WindowsClass.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
