--- a/DirectXGame2.vcxproj
+++ b/DirectXGame2.vcxproj
@@ -12,12 +12,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ConvertString.cpp" />
-    <ClCompile Include="DirectXClass.cpp" />
+    <ClCompile Include="DirectXCommon.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MyEngine.cpp" />
     <ClCompile Include="MyMath.cpp" />
     <ClCompile Include="Triangle.cpp" />
-    <ClCompile Include="WindowsClass.cpp" />
+    <ClCompile Include="WindowsApp.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
@@ -38,13 +38,13 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConvertString.h" />
-    <ClInclude Include="DirectXClass.h" />
+    <ClInclude Include="DirectXCommon.h" />
     <ClInclude Include="Matrix4x4.h" />
     <ClInclude Include="MyEngine.h" />
     <ClInclude Include="MyMath.h" />
     <ClInclude Include="Triangle.h" />
     <ClInclude Include="Vector3.h" />
-    <ClInclude Include="WindowsClass.h" />
+    <ClInclude Include="WindowsApp.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
