--- a/imgui.ini
+++ b/imgui.ini
@@ -4,7 +4,17 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=650,20
+Pos=737,18
 Size=550,680
+Collapsed=1
+
+[Window][Material]
+Pos=28,24
+Size=411,345
+Collapsed=0
+
+[Window][Window]
+Pos=86,63
+Size=496,87
 Collapsed=0
 
