--- a/imgui.ini
+++ b/imgui.ini
@@ -18,3 +18,13 @@ Pos=86,63
 Size=496,87
 Collapsed=0
 
+[Window][Update]
+Pos=131,78
+Size=507,170
+Collapsed=0
+
+[Window][Setting]
+Pos=60,60
+Size=595,144
+Collapsed=0
+
