02_04 InputLayoutの拡張まで

--- a/DirectXGame2.vcxproj
+++ b/DirectXGame2.vcxproj
@@ -58,7 +58,9 @@
     <ClInclude Include="MyEngine.h" />
     <ClInclude Include="MyMath.h" />
     <ClInclude Include="Triangle.h" />
+    <ClInclude Include="Vector2.h" />
     <ClInclude Include="Vector3.h" />
+    <ClInclude Include="VertexData.h" />
     <ClInclude Include="WindowsApp.h" />
   </ItemGroup>
   <ItemGroup>
