03_00完成 Camera,GameSceneを追加

--- a/imgui.ini
+++ b/imgui.ini
@@ -28,3 +28,23 @@ Pos=60,60
 Size=595,144
 Collapsed=0
 
+[Window][TriAngleColor]
+Pos=59,27
+Size=342,148
+Collapsed=0
+
+[Window][Camera]
+Pos=749,193
+Size=237,130
+Collapsed=0
+
+[Window][TriAngle]
+Pos=60,60
+Size=398,227
+Collapsed=0
+
+[Window][TriAngle,Sprite]
+Pos=19,338
+Size=454,263
+Collapsed=0
+
