--- a/imgui.ini
+++ b/imgui.ini
@@ -44,7 +44,12 @@ Size=398,227
 Collapsed=0
 
 [Window][TriAngle,Sprite]
-Pos=19,338
+Pos=44,332
 Size=454,263
+Collapsed=0
+
+[Window][TriAngle,Sprite,Sphere]
+Pos=34,188
+Size=399,436
 Collapsed=0
 
