--- a/imgui.ini
+++ b/imgui.ini
@@ -59,7 +59,12 @@ Size=267,131
 Collapsed=0
 
 [Window][Light]
-Pos=-77,66
+Pos=728,193
 Size=389,203
+Collapsed=0
+
+[Window][Obj]
+Pos=60,60
+Size=441,269
 Collapsed=0
 
