--- a/DirectXGame2.vcxproj
+++ b/DirectXGame2.vcxproj
@@ -69,6 +69,7 @@
     <ClInclude Include="MyImGui.h" />
     <ClInclude Include="MyMath.h" />
     <ClInclude Include="GameScene.h" />
+    <ClInclude Include="ResourceObject.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="TransformationMatrix.h" />
     <ClInclude Include="Vector2.h" />
