--- a/imgui.ini
+++ b/imgui.ini
@@ -64,12 +64,17 @@ Size=389,203
 Collapsed=0
 
 [Window][Obj]
-Pos=60,60
+Pos=410,84
 Size=441,269
 Collapsed=0
 
 [Window][StateNum]
 Pos=60,60
 Size=123,71
+Collapsed=0
+
+[Window][count]
+Pos=60,60
+Size=348,183
 Collapsed=0
 
