--- a/imgui.ini
+++ b/imgui.ini
@@ -69,12 +69,17 @@ Size=441,269
 Collapsed=1
 
 [Window][StateNum]
-Pos=60,60
+Pos=59,60
 Size=123,71
 Collapsed=0
 
 [Window][count]
 Pos=49,266
 Size=348,98
+Collapsed=0
+
+[Window][DebugCamera]
+Pos=628,150
+Size=529,210
 Collapsed=0
 
