--- a/DirectXGame2.vcxproj
+++ b/DirectXGame2.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="MyImGui.cpp" />
     <ClCompile Include="MyMath.cpp" />
     <ClCompile Include="GameScene.cpp" />
+    <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="WindowsApp.cpp" />
@@ -90,6 +91,7 @@
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="ResourceObject.h" />
     <ClInclude Include="Sphere.h" />
+    <ClInclude Include="Sprite.h" />
     <ClInclude Include="TextureManager.h" />
     <ClInclude Include="TransformationMatrix.h" />
     <ClInclude Include="Triangle.h" />
