--- a/DirectXGame2.vcxproj
+++ b/DirectXGame2.vcxproj
@@ -36,7 +36,9 @@
     <ClCompile Include="Sprite.cpp" />
     <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="Triangle.cpp" />
+    <ClCompile Include="ViewProjection.cpp" />
     <ClCompile Include="WindowsApp.cpp" />
+    <ClCompile Include="WorldTransform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
@@ -98,7 +100,9 @@
     <ClInclude Include="Vector2.h" />
     <ClInclude Include="Vector3.h" />
     <ClInclude Include="VertexData.h" />
+    <ClInclude Include="ViewProjection.h" />
     <ClInclude Include="WindowsApp.h" />
+    <ClInclude Include="WorldTransform.h" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="externals\imgui\LICENSE.txt" />
