--- a/DirectXGame2.vcxproj.filters
+++ b/DirectXGame2.vcxproj.filters
@@ -171,6 +171,9 @@
     <ClCompile Include="Light.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
+    <ClCompile Include="Model.cpp">
+      <Filter>ソース ファイル\base\3d</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
@@ -212,9 +215,6 @@
       <Filter>ヘッダー ファイル\imgui</Filter>
     </ClInclude>
     <ClInclude Include="Material.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
-    <ClInclude Include="DirectionalLight.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
     <ClInclude Include="ModelData.h">
@@ -309,6 +309,9 @@
     </ClInclude>
     <ClInclude Include="Light.h">
       <Filter>ヘッダー ファイル</Filter>
+    </ClInclude>
+    <ClInclude Include="Model.h">
+      <Filter>ヘッダー ファイル\base\3d</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
